# upload-server-rs

./: .env.template  .gitignore  Cargo.toml  README.md
src/: applications.rs  lib.rs
src/adapters/: incoming.rs  outgoing.rs
src/adapters/incoming/: upload_http_adapter.rs
src/adapters/outgoing/: object_storage_minio_adapter.rs
src/applications/: uploader.rs
src/domain/: ports.rs  value_objects.rs
src/domain/ports/: services.rs  spis.rs
src/domain/ports/services/: upload_service.rs
src/domain/ports/spis/: object_storage_spi.rs
src/domain/value_objects/: bucket.rs  error.rs  object.rs  object_segment.rs  object_storage_client_config.rs  storage_path.rs
src/infrastructure/: http.rs
src/testing/: fake_object_storage_client.rs  mod.rs
